; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movem_16_er_ix.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movem_16_er_ix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_DA = common dso_local global i32* null, align 8
@CYC_MOVEM_W = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_movem_16_er_ix() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %5 = call i32 (...) @OPER_I_16()
  store i32 %5, i32* %2, align 4
  %6 = call i32 (...) @EA_AY_IX_16()
  store i32 %6, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %30, %0
  %8 = load i32, i32* %1, align 4
  %9 = icmp slt i32 %8, 16
  br i1 %9, label %10, label %33

10:                                               ; preds = %7
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* %1, align 4
  %13 = shl i32 1, %12
  %14 = and i32 %11, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %29

16:                                               ; preds = %10
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @m68ki_read_16(i32 %17)
  %19 = call i32 @MASK_OUT_ABOVE_16(i32 %18)
  %20 = call i32 @MAKE_INT_16(i32 %19)
  %21 = load i32*, i32** @REG_DA, align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32 %20, i32* %24, align 4
  %25 = load i32, i32* %3, align 4
  %26 = add nsw i32 %25, 2
  store i32 %26, i32* %3, align 4
  %27 = load i32, i32* %4, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %16, %10
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %1, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %1, align 4
  br label %7

33:                                               ; preds = %7
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* @CYC_MOVEM_W, align 4
  %36 = shl i32 %34, %35
  %37 = call i32 @USE_CYCLES(i32 %36)
  ret void
}

declare dso_local i32 @OPER_I_16(...) #1

declare dso_local i32 @EA_AY_IX_16(...) #1

declare dso_local i32 @MAKE_INT_16(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @m68ki_read_16(i32) #1

declare dso_local i32 @USE_CYCLES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
